[package]
name = "term-image-cli"
version = "0.1.0"
authors = ["Noskcaj <kcajdev@gmail.com>"]
edition = "2018"

[dependencies]
term-image = { path = "../term-image" }
term-image-crossterm = { path = "../term-image-crossterm" }

crossterm = "0.23.2"
image = "0.24.2"
signal-hook = "0.3.14"
base64 = "0.13.0"
itertools = "0.10.3"

[dependencies.clap]
version = "3.1.18"
default-features = false
features = [ "std", "suggestions", "color" ]
