[package]
name = "term-image"
version = "0.1.0"
authors = ["Noskcaj <kcajdev@gmail.com>"]
edition = "2018"

[features]
iterm = ["iterm2"]
kitty = ["base64"]
default = ["iterm", "kitty"]

[dependencies]
image = { version = "0.24.2", default-features = false }
base64 = { version = "0.13.0", optional = true }
itertools = "0.10.3"
iterm2 = { git = "https://github.com/Noskcaj19/iterm2", rev = "a2a7060", optional = true }
